<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/favoritebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites_btn" />

        <Button
            android:id="@+id/homebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_btn" />

        <Button
            android:id="@+id/browsebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:rotationX="0"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/input_word" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_btn" />

        <TextView
            android:id="@+id/englishWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_results" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/displayGif"
            android:layout_width="150dp"
            android:layout_height="200dp"
           />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>